--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "30.0.1"
+    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "us.mifeng.jetpacket1"
         minSdkVersion 19
@@ -32,7 +32,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    def lifecycle_version = "2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    //def lifecycle_version = "2.2.0"
+   // implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+
 }
