--- a/libnavCompiler/build.gradle
+++ b/libnavCompiler/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.google.auto.service:auto-service:1.0-rc4'
+    implementation 'com.alibaba:fastjson:1.2.59'
+    implementation project(path: ':libnavannotation')
+
+
 }
 
 sourceCompatibility = "8"
