--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(":libnavannotation")
     annotationProcessor project(":libnavCompiler")
+    implementation 'com.alibaba:fastjson:1.2.59'
 
 
     //def lifecycle_version = "2.2.0"
